2004-07-13  Rudolf Lippan <rlippan@remotelinux.com> (2.9004)
        * myld now exits with the return value of ld rather than always exiting
          with a value of when when myld returned something other than 0.
        * Table names that had '?'s in them and were quoted using '`' would thow
          off placeholder counting.
        * Add support for mysq 4.1.3's api change to shutdown 
          [Patrick Galbraith]
        * Fixed to error messages in t/50commit.t 
          [Decker, Gero <gero.decker@sap.com>]
        * Fix to documentation of mysql_local_info.  enabling 
          mysql_local_infile is ineffective if LOCAL is disabled in the server
          and not effective as docs had read. [Paul DuBois <paul@snake.net>]

2003-10-26  Rudy Lippan  <rlippan@remotelinux.com> (2.9003)
	* Applied patch from Aaron and Chuck that added basic testing of the 
	  table_info/column_info functions [Aaron Ross <aross@plusthree.com>]
	* Applied patch removing Jochen Wiedmann's contanct information and 
	  also removing the restriction on CD ROM distribution. 
	  [Jochen Wiedmen <joe@ispsoft.de>]
	* The check for the innodb table type was broken so the transaction
	  tests were skipped even though the database supported transactions.
	* :sql_types were not being inported in column info, so SQL_VARCAR was
	  thowing an error. Also, the :sql_types were not being pulled into 
	  DBD::mysq::db package
	* Patch for  dbdadmin.t so that it respects username and password
	  [Alexey Stroganov <ranger@mysql.com>]
	* Fix for memory leak in bind_param() introduced in 2.9002
	  (2.9002 changed bind_param so that changing the value of a scalar
	  after binding would not affect what was passed to execute eg: 
	     $sth->bind_param(1,$foo);
	     $foo = 'bar'
	     $sth->execute() -- $foo would contain 'bar')
	  [reported by <shildreth@emsphone.com>]
	* don't define dbd_discon_all so that mysql uses DBI's This fixes a 
	  bug whereby DBD::mysql was dropping perl's destruct level.